--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <img src="./images/hotel/6.jpg" class="img-fluid" alt="" srcset="">
         </div>
         <div class="col-md-3 mt-2">
-            <img src="./images/hotel/7.jpeg" class="img-fluid" alt="" srcset="">
+            <img src="./images/hotel/7.jpg" class="img-fluid" alt="" srcset="">
         </div>
      
         <div class="col-md-3 mt-2">
@@ -271,7 +271,7 @@ We also provide luxury camping in rishikesh with all meals snacks
                     <div class="border-box flipped"></div>
                 </div>
                 <div class="col-md-7">
-                    <img class="img-fluid b-lazy" src="images/hotel/7.jpeg" data-src="images/hotel/7.jpeg" alt="product-img">
+                    <img class="img-fluid b-lazy" src="images/hotel/7.jpg" data-src="images/hotel/7.jpg" alt="product-img">
                 </div>
             </div>
 
@@ -472,7 +472,8 @@ and would love to provide vehicles for your pick up and drops form Dehradun Airp
     </div> <!-- /// Container End /// -->
 
 
-
+        <iframe width="100%" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13805.369031352675!2d78.3028233!3d30.1130184!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb82db877c2647f2d!2s%23Hashtag%20Adventure!5e0!3m2!1sen!2sin!4v1670555775934!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        
     <div id="cta-section">
         <div class="container">
             <a id="cta"></a><!-- Nav Anchor -->
@@ -495,6 +496,7 @@ and would love to provide vehicles for your pick up and drops form Dehradun Airp
                 </div>
             </div>
         </div>
+
         <div id="footer">
             <div class="row">
                 <div class="col-md-12 text-center">
